[BP] Display the menubar correctly on small screens (#2999)
Fixes #2934.

Changes made:
- hide icons
- added a user/profile submenu
- fix for height when logged in (caused by truncating long GN title)
- layer indicator doesn't need whitespace anymore
- added margin in footer on small screens
- added class `fa-fw` to icon on the navbar

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -850,6 +850,16 @@ input.ng-invalid {
   margin: 8px 0px;
 }
 
+// styles for the username dropdown in the navbar
+.username-dropdown {
+  .dropdown-menu {
+    & > .active > a {
+      color: #333;
+      background-color: transparent;
+      font-weight: 500;
+    }
+  }
+}
 // styles for login popup in the navbar
 .signin-dropdown {
   .dropdown-menu {
